<resources>
    <string name="app_name">SaitowApp</string>
    <string name="userName">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="btn_logout">LogOut</string>
    <string name="btn_sort">Sort</string>
    <string name="btn_filter">Filter</string>

    <string name="order_id"> Order Id :</string>
    <string name="op_price">Operator Price</string>
    <string name="with_tax">With Tax(Gross)</string>
    <string name="without_tax">Without Tax(Net)</string>
    <string name="payment_method">Payment Method : </string>
    <string name="date">Date :</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
</resources>