<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edtxt_shape"
                android:padding="3dp"
                android:textColor="@color/black"
                android:id="@+id/edt_startDate" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/purple_200"
                android:text="@string/select_date"
                android:id="@+id/btn_date" />

<!--            <EditText-->
<!--                android:layout_width="200dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/in_time"-->
<!--                android:layout_below="@+id/in_date"-->
<!--                android:layout_alignParentLeft="true"-->
<!--                android:layout_alignParentStart="true" />-->

<!--            <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/select_time"-->
<!--                android:id="@+id/btn_time"-->
<!--                android:layout_below="@+id/btn_date"-->
<!--                android:layout_alignLeft="@+id/btn_date"-->
<!--                android:layout_alignStart="@+id/btn_date" />-->

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        card_view:cardCornerRadius="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/edt_endDate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@drawable/edtxt_shape"
                android:padding="3dp"
             />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:text="@string/select_date"
                android:backgroundTint="@color/purple_200"
                android:id="@+id/btn_enddate"
         />

<!--            <EditText-->
<!--                android:layout_width="200dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/in_endtime"-->
<!--                android:layout_below="@+id/in_enddate"-->
<!--                android:layout_alignParentLeft="true"-->
<!--                android:layout_alignParentStart="true" />-->

<!--            <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:backgroundTint="@color/grey"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="@string/select_time"-->
<!--                android:id="@+id/btn_endtime"-->
<!--                android:layout_below="@+id/btn_enddate"-->
<!--                android:layout_alignLeft="@+id/btn_enddate"-->
<!--                android:layout_alignStart="@+id/btn_enddate" />-->

        </LinearLayout>
    </androidx.cardview.widget.CardView>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_filter"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_shape"
            android:clickable="true"
            android:text="Filter"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_shape"
            android:clickable="true"
            android:text="Cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>